Show orders list in store page

--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -1,9 +1,40 @@
+<style>
+    table, th, td {
+        border: 1px solid black;
+        border-collapse: collapse;
+    }
+    th, td {
+        padding: 5px;
+    }
+</style>
+
 <p id="notice"><%= notice %></p>
 
 <p>
   <strong>Name:</strong>
   <%= @store.name %>
 </p>
+
+<table>
+  <thead>
+    <tr>
+      <th>Item</th>
+      <th>Order by</th>
+      <th>Order date</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @orders.each do |order| %>
+      <tr>
+        <td><%= order.item.name %></td>
+        <td><%= order.user.email %></td>
+        <td><%= order.created_at.to_formatted_s(:db) %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+<br/>
 
 <%= link_to 'Edit', edit_store_path(@store) %> |
 <%= link_to 'Back', stores_path %>
