--- a/public/css/common.css
+++ b/public/css/common.css
@@ -28,6 +28,8 @@ html, body {
 
 .content {
     padding-top: 64px;
+    width: 980px;
+    margin: 0 auto;
 }
 
 .footer {
@@ -40,3 +42,22 @@ html, body {
 .clearfix {
     clear: both;
 }
+
+.mui-toolbar {
+    width: 100%;
+    display: block;
+    margin-top: 20px;
+}
+.mui-toolbar-group.mui-left {
+    float: left;
+}
+.mui-toolbar-group.mui-right {
+    float: right;
+}
+
+@media (max-width: 980px) {
+    .content {
+        width: 100%;
+    }   
+}
+
