--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,5 +1,12 @@
 <h1>New Order</h1>
 
-<%= render 'form' %>
+<form action="<%= orders_path %>" method="post">
+  Item_id: <input type="text" name="item_id"><br>
+  Store_ids:
+  <% Store.all.each do |store| %>
+      <input type="checkbox" name="store_ids[]" value="<%= store.id %>" ><%= store.name %><br>
+  <% end %>
+  <input type="submit" value="Submit">
+</form>
 
 <%= link_to 'Back', orders_path %>
