--- a/public/css/common.css
+++ b/public/css/common.css
@@ -43,14 +43,26 @@ html, body {
     clear: both;
 }
 
+.half {
+    width: 50%;
+    float: left;
+}
+
+.row {
+    width: 100%;
+}
+
 .mui-toolbar {
     width: 100%;
     display: block;
     margin-top: 20px;
+    margin-bottom: 20px;
 }
+
 .mui-toolbar-group.mui-left {
     float: left;
 }
+
 .mui-toolbar-group.mui-right {
     float: right;
 }
@@ -58,6 +70,6 @@ html, body {
 @media (max-width: 980px) {
     .content {
         width: 100%;
-    }   
+    }
 }
 
