--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -25,7 +25,7 @@
   </thead>
 
   <tbody>
-    <% @orders.each do |order| %>
+    <% @store.orders.pendings.each do |order| %>
       <tr>
         <td><%= order.item.name %></td>
         <td><%= order.user.email %></td>
