--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -33,3 +33,6 @@
 <form action="/orders/<%= @order.id %>/buy" method='POST'>
     <input type="submit" value="Buy">
 </form>
+<form action="/orders/<%= @order.id %>/cancel" method='POST'>
+    <input type="submit" value="Cancel">
+</form>
