Show stores in order listing page

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -4,7 +4,7 @@
         border-collapse: collapse;
     }
     th, td {
-        padding: 5px;
+        padding: 5px 10px;
     }
 </style>
 
@@ -17,6 +17,7 @@
     <tr>
       <th>Item</th>
       <th>User</th>
+      <th>Stores</th>
       <th>Created</th>
       <th>Completed</th>
       <th colspan="3"></th>
@@ -28,6 +29,7 @@
       <tr>
         <td><%= order.item.name %></td>
         <td><%= order.user.name %></td>
+        <td><%= order.stores.each.map{ |store| store.name }.join(', ') %></td>
         <td><%= order.created_at.to_formatted_s(:db) %></td>
         <% if order.fullfilled? %>
           <td><%= order.completed.to_formatted_s(:db) %></td>
