Update css lib folder.

--- a/app/views/static/user.html
+++ b/app/views/static/user.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>Buy Me</title>
-    <link rel="stylesheet" href="lib/material-design-fonticons/styles/mdfi.css">
-    <link rel="stylesheet" href="css/material-ui.css">
+    <link rel="stylesheet" href="lib/css/mdfi.css">
+    <link rel="stylesheet" href="lib/css/material-ui.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/user.css">
 </head>
