--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -8,13 +8,16 @@ html, body {
     height: 100%;
     font-size: 16px;
 }
+
 ul li, ol li {
     list-style: none;
 }
+
 h2 {
     font-size: 2em;
     padding-top: 0;
 }
+
 .header {
     background-color: #286090;
     color: #ffffff;
@@ -74,6 +77,24 @@ h2 {
     margin-bottom: 20px;
 }
 
+.toast-success {
+    top: 0;
+    bottom: initial;
+    left: initial;
+    right: 0;
+    z-index: 100;
+    background: #00e676;
+}
+
+.toast-error {
+    top: 0;
+    bottom: initial;
+    left: initial;
+    right: 0;
+    z-index: 100;
+    background: #f50057;
+}
+
 .mui-left {
     float: left;
 }
@@ -82,29 +103,35 @@ h2 {
     float: right;
     text-align: right;
 }
+
 .mui-togglebar {
     margin: 0 10px;
     border-bottom: 1px solid #e1e1e1;
 }
+
 .mui-togglebar-wrap {
     display: inline-block;
     margin-right: 8px;
 }
+
 .order-store-list li {
     display: inline-block;
     margin-right: 10px;
 }
+
 .form-checkbox .mui-checkbox, .form-checkbox span {
     display: inline-block;
     margin-bottom: 8px;
     margin-right: 8px;
     vertical-align: bottom;
 }
+
 @media (max-width: 980px) {
     .content {
         width: 100%;
     }
 }
+
 @media (max-width: 767px) {
     .half {
         float: none;
