--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -77,22 +77,32 @@ h2 {
     margin-bottom: 20px;
 }
 
-.toast-success {
-    top: 0;
+.toast {
+    top: 50px;
     bottom: initial;
     left: initial;
-    right: 0;
-    z-index: 100;
+    right: -15px;
+    z-index: 10;
+}
+
+.toast-success {
     background: #00e676;
 }
 
 .toast-error {
-    top: 0;
-    bottom: initial;
-    left: initial;
-    right: 0;
-    z-index: 100;
     background: #f50057;
+}
+
+.toast.mui-toast {
+    padding: 0 15px;
+}
+
+.toast .mui-toast-message {
+    padding-right: 5px;
+}
+
+.toast .mui-toast-action {
+    margin-left: 5px;
 }
 
 .mui-left {
