Show updated_at in order and order listing page

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -21,6 +21,11 @@
 </p>
 
 <p>
+  <strong>Updated:</strong>
+  <%= @order.updated_at.to_formatted_s(:db) %>
+</p>
+
+<p>
   <strong>Completed:</strong>
   <% if @order.fullfilled? %>
     <%= @order.completed.to_formatted_s(:db) %>
