--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -19,6 +19,7 @@
       <th>User</th>
       <th>Stores</th>
       <th>Created</th>
+      <th>Updated</th>
       <th>Completed</th>
       <th colspan="3"></th>
     </tr>
@@ -31,6 +32,7 @@
         <td><%= order.user.name %></td>
         <td><%= order.stores.each.map{ |store| store.name }.join(', ') %></td>
         <td><%= order.created_at.to_formatted_s(:db) %></td>
+        <td><%= order.updated_at.to_formatted_s(:db) %></td>
         <% if order.fullfilled? %>
           <td><%= order.completed.to_formatted_s(:db) %></td>
         <% else%>
