--- a/app/views/static/app.html.erb
+++ b/app/views/static/app.html.erb
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1, user-scalable=no">
     <title>Buy Me</title>
     <%= stylesheet_link_tag 'lib', media: 'all', 'data-turbolinks-track' => true %>
     <%= stylesheet_link_tag 'common', media: 'all', 'data-turbolinks-track' => true %>
