--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -30,6 +30,12 @@
     padding: 20px;
 }
 
+.order-add-container {
+    padding-top: 60px;
+    width: 1000px;
+    margin: 0 auto -80px auto;
+}
+
 .order-add .mui-dialog-window-contents {
     width: 370px;
 }
@@ -94,6 +100,10 @@
         padding: 10px 0;
         width: 100%;
         float: none;
+    }
+
+    .order-add-container {
+        width: 100%;
     }
 
     .order-add input {
