--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -41,3 +41,6 @@
 <form action="/orders/<%= @order.id %>/cancel" method='POST'>
     <input type="submit" value="Cancel">
 </form>
+<form action="/orders/<%= @order.id %>/plusone" method='POST'>
+    <input type="submit" value="Plusone">
+</form>
