--- a/app/assets/stylesheets/user.css
+++ b/app/assets/stylesheets/user.css
@@ -25,11 +25,11 @@
 
 @media (max-width: 767px) {
     .login {
-        margin-bottom: -20px;
+        margin: 10px 10px -20px 10px;
     }
 
     .login > div {
-        padding: 20px;
+        padding: 15px;
     }
 
     .login h1 {
@@ -37,12 +37,12 @@
     }
 
     .login .mui-input {
-        margin-top: 18px;
-        margin-bottom: 36px;
+        margin-top: 15px;
+        margin-bottom: 30px;
     }
 
     .login .form-checkbox.mui-input {
-        margin-bottom: 14px;
+        margin-bottom: 10px;
     }
 
     .login input {
@@ -57,16 +57,16 @@
         width: 100%;
     }
 
-    .login {
-        margin-bottom: -20px;
+    .login .mui-input-bar {
+        max-width: 100%;
     }
 
     .signup {
-        margin-bottom: -20px;
+        margin: 10px 10px -20px 10px;
     }
 
     .signup > div {
-        padding: 20px;
+        padding: 15px;
     }
 
     .signup h1 {
@@ -74,8 +74,12 @@
     }
 
     .signup .mui-input {
-        margin-top: 21px;
-        margin-bottom: 42px;
+        margin-top: 15px;
+        margin-bottom: 30px;
+    }
+
+    .signup .mui-input.mui-input-large {
+        margin-bottom: 40px;
     }
 
     .signup input {
@@ -84,9 +88,5 @@
 
     .signup .mui-raised-button {
         width: 100%;
-    }
-
-    .login .mui-input-bar {
-        max-width: 100%;
     }
 }
